--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.3.4",
         "bootstrap": "^5.1.0",
+        "history": "^4.9.0",
         "lodash": "^4.17.15",
         "nanoid": "^4.0.2",
         "prop-types": "^15.8.1",
